force-app/main/default/objects/Account/fields/First_Click_Medium__c.field-meta.xml
<CustomField>
    <fullName>First_Click_Medium__c</fullName>
    <formula>Contact_Person__r.gaconnector_First_Click_Medium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Click Medium</label>
    <type>Text</type>
</CustomField>