force-app/main/default/objects/Account/fields/First_Impressions_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Impressions_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Impressions Date</label>
    <type>Date</type>
</CustomField>