force-app/main/default/objects/Account/fields/First_Personalized_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Personalized_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Personalized Date</label>
    <type>DateTime</type>
</CustomField>