force-app/main/default/objects/Account/fields/gaconnector_Browser__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Browser__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>