force-app/main/default/objects/Account/fields/gaconnector_Device__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Device__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>