force-app/main/default/objects/Account/fields/gaconnector_First_Click_Campaign__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Click Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>