force-app/main/default/objects/Account/fields/gaconnector_Last_Click_Term__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Last_Click_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Click Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>