force-app/main/default/objects/Account/fields/gaconnector_Number_of_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Website Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>