force-app/main/default/objects/Account/fields/gaconnector_Time_Spent_on_Website__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
    <label>Time Spent on Website</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>