force-app/main/default/objects/Account/fields/Gross_Written_Premium__c.field-meta.xml
<CustomField>
    <fullName>Gross_Written_Premium__c</fullName>
    <description>A roll-up summary field that gets the total broker GWP, premium adjusted.</description>
    <label>Gross Written Premium</label>
    <summarizedField>Opportunity.Premium_Adjusted__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>