force-app/main/default/objects/Account/fields/High_Level_Industry__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Industry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Industry Reporting</label>
    <length>55</length>
    <type>Text</type>
</CustomField>