force-app/main/default/objects/Account/fields/HR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Name__c</fullName>
    <description>For Scale to track the HR Contact for ePlace</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>