force-app/main/default/objects/Account/fields/HR_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Phone__c</fullName>
    <description>For Scale to track the HR Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>