force-app/main/default/objects/Account/fields/Impressions_all_time__c.field-meta.xml
<CustomField>
    <fullName>Impressions_all_time__c</fullName>
    <label>Impressions (all time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>