force-app/main/default/objects/Account/fields/Improvements__c.field-meta.xml
<CustomField>
    <fullName>Improvements__c</fullName>
    <description>Use this field to include in the Insurance Renewal Doc</description>
    <inlineHelpText>Use this field to include in the Insurance Renewal Doc</inlineHelpText>
    <label>Improvements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GL - Add Blanket Additional Insured Language</fullName>
            </value>
            <value>
                <fullName>GL - Include product-recall expense sublimit</fullName>
                <label>GL - Include Product-Recall Expense Sublimit</label>
            </value>
            <value>
                <fullName>GL - Address Sexual Abuse Liability and Assault and Battery Liability</fullName>
            </value>
            <value>
                <fullName>GL - Advocate for more favorable Minimum &amp; Deposit %</fullName>
            </value>
            <value>
                <fullName>GL - Confirm defense costs not within the limits</fullName>
            </value>
            <value>
                <fullName>GL - Enhance Audit Provisions - 2 Way Audit/Non auditable</fullName>
            </value>
            <value>
                <fullName>Property - Agreed Value to waive Co-Insurance</fullName>
            </value>
            <value>
                <fullName>Property - Address Protective Safeguards</fullName>
            </value>
            <value>
                <fullName>Property - Enhanced &apos;property off premises&apos; sublimit</fullName>
            </value>
            <value>
                <fullName>Property - Enhanced &apos;property in transit&apos; sublimit</fullName>
            </value>
            <value>
                <fullName>Property - Add Business Interruption</fullName>
            </value>
            <value>
                <fullName>Property - Replacement Cost Value</fullName>
            </value>
            <value>
                <fullName>Workers Comp - Push for Experience Modification Rating to be applied</fullName>
                <label>Workers Comp - Push for Experience Modification Rating to be applied (Premium must be above $10k for 3 consecutive years to apply)</label>
            </value>
            <value>
                <fullName>Workers Comp - Explore dividend program</fullName>
            </value>
            <value>
                <fullName>Workers Comp - Ensure remote employees in other states are covered</fullName>
            </value>
            <value>
                <fullName>Workers Comp - All Other States Coverage</fullName>
            </value>
            <value>
                <fullName>Workers Comp - Stop Gap for monopolistic states (if not picked up on GL)</fullName>
            </value>
            <value>
                <fullName>Workers Comp - Request state credits available (i.e. Drug program credit or safety credit)</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Address hammer clause</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Extend coverage to board advisors</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Ensure roadshow coverage is included</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Side A Carve Back for professional liability exclusion</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Side A Carve Back for Anti trust exclusion</fullName>
            </value>
            <value>
                <fullName>D&amp;O - Add pre approved choice of counsel</fullName>
            </value>
            <value>
                <fullName>EPLI - Discuss Wage &amp; Hour sublimit</fullName>
            </value>
            <value>
                <fullName>EPLI - ​Address hammer clause</fullName>
            </value>
            <value>
                <fullName>EPLI - Add IC to definition of employee</fullName>
            </value>
            <value>
                <fullName>E&amp;O/Cyber - Bricking Endorsement</fullName>
            </value>
            <value>
                <fullName>E&amp;O/Cyber - Bodily Injury Property Damage Sublimit</fullName>
            </value>
            <value>
                <fullName>E&amp;O/Cyber - Broaden Business Interruption coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>