force-app/main/default/objects/Account/fields/In_Force_ML_Policy__c.field-meta.xml
<CustomField>
    <fullName>In_Force_ML_Policy__c</fullName>
    <label>In-Force ML Policy</label>
    <summaryFilterItems>
        <field>Opportunity.Coverages_Text__c</field>
        <operation>contains</operation>
        <value>Directors</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Approved/Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>