force-app/main/default/objects/Account/fields/Industry_Title__c.field-meta.xml
<CustomField>
    <fullName>Industry_Title__c</fullName>
    <formula>NAICS_Code__r.Industry_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Title</label>
    <type>Text</type>
</CustomField>