force-app/main/default/objects/Account/fields/Internal_Marketer_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Marketer Email</label>
    <type>Email</type>
</CustomField>