force-app/main/default/objects/Account/fields/Is_Scale_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Scale_Formula__c</fullName>
    <formula>CONTAINS(RecordType.Name, &quot;Scale&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Scale</label>
    <type>Checkbox</type>
</CustomField>