force-app/main/default/objects/Account/fields/Issuing_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Company_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing Company Email</label>
    <type>Email</type>
</CustomField>