force-app/main/default/objects/Account/fields/Last_Click_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Click_Channel__c</fullName>
    <formula>Contact_Person__r.gaconnector_Last_Click_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Click Channel</label>
    <type>Text</type>
</CustomField>