force-app/main/default/objects/Account/fields/Last_Updated_Date_Moodys__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_Moodys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>