force-app/main/default/objects/Account/fields/Last_Updated_Date_Moodys_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_Moodys_Formula__c</fullName>
    <formula>Last_Updated_Date_Moodys__c &lt;= TODAY()-365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated Date Formula</label>
    <type>Checkbox</type>
</CustomField>