force-app/main/default/objects/Account/fields/Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Lead_Medium__c</fullName>
    <formula>Text(Lead__r.Lead_Medium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Medium</label>
    <type>Text</type>
</CustomField>