force-app/main/default/objects/Account/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arcview</fullName>
            </value>
            <value>
                <fullName>Biz Dev Relationship</fullName>
                <label>Biz Dev</label>
            </value>
            <value>
                <fullName>Brove</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Cold Email</fullName>
                <label>Cold Outreach</label>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Existing/Previous Client</fullName>
            </value>
            <value>
                <fullName>Ads/Paid Search</fullName>
                <label>Google Ad</label>
            </value>
            <value>
                <fullName>Guest Post</fullName>
            </value>
            <value>
                <fullName>Online Network</fullName>
            </value>
            <value>
                <fullName>OpenNest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>SEO/Search</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Sponsored Content</fullName>
            </value>
            <value>
                <fullName>Trailblazers</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Referral_Program</fullName>
                <label>Referral Program</label>
            </value>
            <value>
                <fullName>&quot;Hello&quot; Outreach</fullName>
                <isActive>false</isActive>
                <label>&quot;Hello&quot; Outreach</label>
            </value>
            <value>
                <fullName>Drift Call</fullName>
                <isActive>false</isActive>
                <label>Drift Call</label>
            </value>
            <value>
                <fullName>Early Growth</fullName>
                <isActive>false</isActive>
                <label>Early Growth</label>
            </value>
            <value>
                <fullName>Greg Scheinman Referral</fullName>
                <isActive>false</isActive>
                <label>Greg Scheinman Referral</label>
            </value>
            <value>
                <fullName>Interplay Referral</fullName>
                <isActive>false</isActive>
                <label>Interplay Referral</label>
            </value>
            <value>
                <fullName>Mike Howlett</fullName>
                <isActive>false</isActive>
                <label>Mike Howlett</label>
            </value>
            <value>
                <fullName>New World Markets</fullName>
                <isActive>false</isActive>
                <label>New World Markets</label>
            </value>
            <value>
                <fullName>Ryan Melohn Referral</fullName>
                <isActive>false</isActive>
                <label>Ryan Melohn Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>