force-app/main/default/objects/Account/fields/LinkedIn_Request__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Request</label>
    <type>Checkbox</type>
</CustomField>